--- a/Depo/Depo/Presentation/UserStories/Start/ForgotPassword/View/ForgotPasswordViewController.xib
+++ b/Depo/Depo/Presentation/UserStories/Start/ForgotPassword/View/ForgotPasswordViewController.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19455" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19454"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -40,16 +40,19 @@
                             <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
                             <subviews>
                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="68" translatesAutoresizingMaskIntoConstraints="NO" id="Uj0-i2-5yg">
-                                    <rect key="frame" x="20" y="20" width="335" height="106.5"/>
+                                    <rect key="frame" x="20" y="20" width="335" height="125.5"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oXy-X7-p5o">
-                                            <rect key="frame" x="0.0" y="0.0" width="335" height="21"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="335" height="40"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="40" id="xqJ-4V-ezZ"/>
+                                            </constraints>
                                             <fontDescription key="fontDescription" name="TurkcellSatura" family="Turkcell Satura" pointSize="18"/>
                                             <color key="textColor" red="0.54509803921568623" green="0.5607843137254902" blue="0.64313725490196072" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KTs-IA-6N1">
-                                            <rect key="frame" x="0.0" y="89" width="335" height="17.5"/>
+                                            <rect key="frame" x="0.0" y="108" width="335" height="17.5"/>
                                             <fontDescription key="fontDescription" name="TurkcellSatura-Bold" family="Turkcell Satura" pointSize="15"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
@@ -57,11 +60,11 @@
                                     </subviews>
                                 </stackView>
                                 <view contentMode="scaleToFill" placeholderIntrinsicWidth="335" placeholderIntrinsicHeight="80" translatesAutoresizingMaskIntoConstraints="NO" id="quc-Rg-Lkk" userLabel="email" customClass="ProfileTextEnterView" customModule="Billo" customModuleProvider="target">
-                                    <rect key="frame" x="20" y="136.5" width="335" height="80"/>
+                                    <rect key="frame" x="20" y="155.5" width="335" height="80"/>
                                     <color key="backgroundColor" name="primaryBackground"/>
                                 </view>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BRt-og-nfn" customClass="CaptchaView" customModule="Billo" customModuleProvider="target">
-                                    <rect key="frame" x="20" y="231.5" width="335" height="297.5"/>
+                                    <rect key="frame" x="20" y="250.5" width="335" height="278.5"/>
                                     <color key="backgroundColor" name="primaryBackground"/>
                                 </view>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aQN-30-H9G" customClass="WhiteButtonWithRoundedCorner" customModule="Billo" customModuleProvider="target">
