--- a/Depo/Depo/Presentation/UserStories/Others/SaveToMyLifebox/View/SubViews/SaveToMyLifeboxActionView.xib
+++ b/Depo/Depo/Presentation/UserStories/Others/SaveToMyLifebox/View/SubViews/SaveToMyLifeboxActionView.xib
@@ -11,18 +11,22 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="SaveToMyLifeboxActionView" customModule="lifebox" customModuleProvider="target">
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="SaveToMyLifeboxActionView" customModule="Billo" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="414" height="207"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="csL-wZ-tAG">
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="98u-U8-yiT" customClass="TransparentGradientView" customModule="Billo" customModuleProvider="target">
                     <rect key="frame" x="0.0" y="0.0" width="414" height="207"/>
+                    <color key="backgroundColor" name="primaryBackground"/>
+                </view>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="csL-wZ-tAG">
+                    <rect key="frame" x="0.0" y="0.0" width="414" height="191"/>
                     <subviews>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="aYe-5j-zsr">
-                            <rect key="frame" x="30" y="0.0" width="354" height="207"/>
+                            <rect key="frame" x="30" y="0.0" width="354" height="191"/>
                             <subviews>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="s62-wf-mzj">
-                                    <rect key="frame" x="0.0" y="0.0" width="354" height="103.66666666666667"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="354" height="95.666666666666671"/>
                                     <state key="normal" title="Button"/>
                                     <buttonConfiguration key="configuration" style="plain"/>
                                     <connections>
@@ -30,7 +34,7 @@
                                     </connections>
                                 </button>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Lyl-0h-oeO">
-                                    <rect key="frame" x="0.0" y="103.66666666666669" width="354" height="103.33333333333331"/>
+                                    <rect key="frame" x="0.0" y="95.666666666666686" width="354" height="95.333333333333314"/>
                                     <state key="normal" title="Button"/>
                                     <buttonConfiguration key="configuration" style="plain"/>
                                     <connections>
@@ -43,7 +47,7 @@
                             </constraints>
                         </stackView>
                     </subviews>
-                    <color key="backgroundColor" name="primaryBackground"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstItem="aYe-5j-zsr" firstAttribute="leading" secondItem="csL-wZ-tAG" secondAttribute="leading" constant="30" id="jpf-tY-CKU"/>
                         <constraint firstAttribute="bottom" secondItem="aYe-5j-zsr" secondAttribute="bottom" id="uu8-Cx-t7p"/>
@@ -53,12 +57,16 @@
                 </view>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
-            <color key="backgroundColor" name="primaryBackground"/>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="98u-U8-yiT" secondAttribute="bottom" id="7xh-PY-hg2"/>
+                <constraint firstItem="98u-U8-yiT" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="GsR-cy-sYU"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="csL-wZ-tAG" secondAttribute="trailing" id="JGC-qI-WcU"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="csL-wZ-tAG" secondAttribute="bottom" id="UL6-f5-UaT"/>
+                <constraint firstItem="98u-U8-yiT" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="P8r-Il-v9Y"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="csL-wZ-tAG" secondAttribute="bottom" constant="16" id="UL6-f5-UaT"/>
                 <constraint firstItem="csL-wZ-tAG" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="gfr-o5-KfA"/>
                 <constraint firstItem="csL-wZ-tAG" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="m5u-dw-oel"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="98u-U8-yiT" secondAttribute="trailing" id="mfv-uO-Bz5"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
