--- a/Depo/Depo/Presentation/UserStories/Others/SaveToMyLifebox/View/SubViews/SaveToMyLifeboxTableViewCell.xib
+++ b/Depo/Depo/Presentation/UserStories/Others/SaveToMyLifebox/View/SubViews/SaveToMyLifeboxTableViewCell.xib
@@ -11,7 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="119" id="KGk-i7-Jjw" customClass="SaveToMyLifeboxTableViewCell" customModule="lifebox" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="119" id="KGk-i7-Jjw" customClass="SaveToMyLifeboxTableViewCell" customModule="Billo" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="119"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -22,14 +22,14 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="119"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="tLm-ZL-4Po">
-                                <rect key="frame" x="16" y="47.5" width="24" height="24"/>
+                                <rect key="frame" x="16" y="38.5" width="42" height="42"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="24" id="DSz-3v-tu3"/>
-                                    <constraint firstAttribute="height" constant="24" id="PSK-B2-bZZ"/>
+                                    <constraint firstAttribute="width" constant="42" id="DSz-3v-tu3"/>
+                                    <constraint firstAttribute="height" constant="42" id="PSK-B2-bZZ"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pry-7D-Lnw">
-                                <rect key="frame" x="61" y="49" width="243" height="21"/>
+                                <rect key="frame" x="79" y="49" width="225" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
