--- a/Depo/Depo/Presentation/UserStories/Others/SaveToMyLifebox/View/SubViews/PublicSharedItemsActionView.xib
+++ b/Depo/Depo/Presentation/UserStories/Others/SaveToMyLifebox/View/SubViews/PublicSharedItemsActionView.xib
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_7" orientation="portrait" appearance="light"/>
+    <device id="retina3_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
@@ -12,29 +12,29 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="PublicSharedItemsActionView" customModule="Billo" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="207"/>
+            <rect key="frame" x="0.0" y="0.0" width="433" height="207"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="98u-U8-yiT" customClass="TransparentGradientView" customModule="Billo" customModuleProvider="target">
-                    <rect key="frame" x="0.0" y="0.0" width="414" height="207"/>
+                    <rect key="frame" x="0.0" y="0.0" width="433" height="207"/>
                     <color key="backgroundColor" name="primaryBackground"/>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="csL-wZ-tAG">
-                    <rect key="frame" x="0.0" y="0.0" width="414" height="191"/>
+                    <rect key="frame" x="0.0" y="0.0" width="433" height="187"/>
                     <subviews>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="aYe-5j-zsr">
-                            <rect key="frame" x="30" y="0.0" width="354" height="191"/>
+                            <rect key="frame" x="30" y="0.0" width="373" height="187"/>
                             <subviews>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="s62-wf-mzj">
-                                    <rect key="frame" x="0.0" y="0.0" width="354" height="95.666666666666671"/>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="wordWrap" translatesAutoresizingMaskIntoConstraints="NO" id="s62-wf-mzj">
+                                    <rect key="frame" x="0.0" y="0.0" width="373" height="93.5"/>
                                     <state key="normal" title="Button"/>
                                     <buttonConfiguration key="configuration" style="plain"/>
                                     <connections>
                                         <action selector="saveToMyLifeboxButtonTapped:" destination="iN0-l3-epB" eventType="touchUpInside" id="hYe-5o-QDK"/>
                                     </connections>
                                 </button>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Lyl-0h-oeO">
-                                    <rect key="frame" x="0.0" y="95.666666666666686" width="354" height="95.333333333333314"/>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="wordWrap" translatesAutoresizingMaskIntoConstraints="NO" id="Lyl-0h-oeO">
+                                    <rect key="frame" x="0.0" y="93.5" width="373" height="93.5"/>
                                     <state key="normal" title="Button"/>
                                     <buttonConfiguration key="configuration" style="plain"/>
                                     <connections>
@@ -42,9 +42,6 @@
                                     </connections>
                                 </button>
                             </subviews>
-                            <constraints>
-                                <constraint firstAttribute="width" relation="lessThanOrEqual" constant="354" id="MZt-GT-eg4"/>
-                            </constraints>
                         </stackView>
                     </subviews>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -63,7 +60,7 @@
                 <constraint firstItem="98u-U8-yiT" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="GsR-cy-sYU"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="csL-wZ-tAG" secondAttribute="trailing" id="JGC-qI-WcU"/>
                 <constraint firstItem="98u-U8-yiT" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="P8r-Il-v9Y"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="csL-wZ-tAG" secondAttribute="bottom" constant="16" id="UL6-f5-UaT"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="csL-wZ-tAG" secondAttribute="bottom" constant="20" id="UL6-f5-UaT"/>
                 <constraint firstItem="csL-wZ-tAG" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="gfr-o5-KfA"/>
                 <constraint firstItem="csL-wZ-tAG" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="m5u-dw-oel"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="98u-U8-yiT" secondAttribute="trailing" id="mfv-uO-Bz5"/>
@@ -74,7 +71,7 @@
                 <outlet property="saveToMyLifeboxButton" destination="s62-wf-mzj" id="Zf8-Sz-ZMG"/>
                 <outlet property="stackView" destination="aYe-5j-zsr" id="Xmy-Kt-utw"/>
             </connections>
-            <point key="canvasLocation" x="137.68115942028987" y="-140.95982142857142"/>
+            <point key="canvasLocation" x="154.6875" y="-141.875"/>
         </view>
     </objects>
     <resources>
