--- a/Depo/Depo/Presentation/UserStories/Start/PhoneVerification/View/PhoneVerificationViewController.xib
+++ b/Depo/Depo/Presentation/UserStories/Start/PhoneVerification/View/PhoneVerificationViewController.xib
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19455" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19454"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
@@ -173,16 +174,17 @@
                     </constraints>
                 </scrollView>
                 <label opaque="NO" userInteractionEnabled="NO" alpha="0.80000000000000004" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0:00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MBT-Oh-9zN" customClass="SmartTimerLabel" customModule="Billo" customModuleProvider="target">
-                    <rect key="frame" x="175" y="830.5" width="64" height="45.5"/>
+                    <rect key="frame" x="175" y="796.5" width="64" height="45.5"/>
                     <fontDescription key="fontDescription" name="TurkcellSaturaBol" family="TurkcellSaturaBol" pointSize="40"/>
                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
+            <viewLayoutGuide key="safeArea" id="acn-R9-ZAc"/>
             <color key="backgroundColor" name="primaryBackground"/>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="4dA-Bj-4aO" secondAttribute="trailing" id="AZY-am-Lis"/>
-                <constraint firstAttribute="bottom" secondItem="MBT-Oh-9zN" secondAttribute="bottom" constant="20" id="EVf-ei-CA7"/>
+                <constraint firstItem="acn-R9-ZAc" firstAttribute="bottom" secondItem="MBT-Oh-9zN" secondAttribute="bottom" constant="20" id="EVf-ei-CA7"/>
                 <constraint firstItem="4dA-Bj-4aO" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="X20-4m-zQh"/>
                 <constraint firstItem="0SH-Ei-3RR" firstAttribute="height" secondItem="iN0-l3-epB" secondAttribute="height" priority="250" id="Zaf-lf-NCY"/>
                 <constraint firstItem="MBT-Oh-9zN" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="aZC-TG-PYA"/>
